2014-12-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/adjOutlyingness.Rd: fix another old FIXME:
	* R/adjoutlyingness.R (adjOutlyingness): cupper=0, clower=0 now
	computes the classical ("symmetric") outlyingness W/O mc() call.

2014-12-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.92-3

	* R/comedian.R (covComed): new from Maria Anna, tweaked by Valentin
	and modified considerably by MM.

2014-11-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.92-2, released to CRAN on 2014-11-22

2014-11-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.92-1, released to CRAN on 2014-11-18

2014-10-24  Martin Maechler  <maechler@stat.math.ethz.ch>
	and
2014-10-19  Valentin Todorov  <valentin.todorov@chello.at>

	* DESCRIPTION (Version): 0.92-1

	* R/covMcd.R, detmcd.R: added Deterministic MCD as an option to covMcd
	    		(nsamp="deterministic"), function .detMcd()

	* tests/tmcdd.R: new tests, for covMcd() with nsamp="deterministic"

	* tests/tmcdd.Rout.save: new tests, for covMcd() with nsamp="deterministic"

	* inst/xtraR/test_MCD.R: modified to test covMcd() with nsamp="deterministic"

	* NAMESPACE: export the functions r6pack() and doScale() to
	  be used in rrcov for the deterministic S- and MM-estimates

    * src/rffastmcd and init.c, R/covMcd: fix a bug in nsamp="exact"

2014-10-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/adjoutlyingness.R (adjOutlyingness): reverse the defaults of
	'clower' and 'cupper' and fix +/- swap; see new note in man/adjOutlyingness.Rd
	* man/adjOutlyingness.Rd: the wrong defaults came from *.ssc file from Antwerpen

2014-06-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/rllarsbi.f (rlLARSbi): got rid of warnings -- and many GOTOs

2014-06-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.92-0
	* R/nlrob.R (.nls.get.start, nlrob): now works with indexed vector parameters